# coreybot

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
coreybot/: .env.example  __init__.py  __main__.py
coreybot/core/: __init__.py  cancel.py  config.py  message.py  paths.py
coreybot/frontends/: __init__.py  chat_loop.py
coreybot/frontends/tui/: AGENTS.md  __init__.py  app.py  flow.py
coreybot/llm/: __init__.py  http_client.py  protocol.py
coreybot/llm/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
coreybot/runtime/: __init__.py  agent.py  session.py  session_service.py  session_store.py
coreybot/security/: __init__.py  capabilities.py  context.py  journal.py  pipeline.py  policy.py  reversibility.py  rules.py  secrets.py
coreybot/tools/: __init__.py  base.py
coreybot/tools/builtin/: README.md  __init__.py
coreybot/tools/builtin/bash/: __init__.py  (+2 more)
tests/: conftest.py  test_agent.py  test_cancel.py  test_chat_loop.py  test_config.py  test_flow.py  test_http_client.py  test_message.py  test_paths.py  test_protocol.py  test_providers_anthropic.py  test_providers_gemini.py  test_providers_openai.py  test_registry.py  test_safety.py  test_security.py  test_session.py  test_session_service.py  test_session_store.py  test_tools.py  test_tui.py
(+27 files in other folders)
